--- a/config/.env
+++ b/config/.env
@@ -12,7 +12,7 @@ REDIS_URL="redis://default:9AV59FivAswqDFazrzFnY8HncH03NUmf@redis-10482.c326.us-
 
 MAX_AGE=3600000
 
-NAVER_SECRET=5b9a5500bd61971c39c697f7cb57cc15
+NAVER_SECRET=
 NAVER_ID=
 
 KAKAO_ID=
