--- a/config/.env
+++ b/config/.env
@@ -1,22 +1,20 @@
 PORT=3000
 ALLOW_PORT=5050
 COOKIE_SECRET=API서버 전용 쿠키
-
+REDIS_URI="redis://default:9AV59FivAswqDFazrzFnY8HncH03NUmf@redis-10482.c326.us-east-1-3.ec2.cloud.redislabs.com:10482"
 MONGO_URI="mongodb+srv://kimhd853:KIMhd7624~@default.ozyr2oo.mongodb.net/default?retryWrites=true&w=majority"
 
 MONGO_ID=kimhd853
 MONGO_PW=KIMhd7624~
 MONGO_DB=default
 
-REDIS_URL="redis://default:9AV59FivAswqDFazrzFnY8HncH03NUmf@redis-10482.c326.us-east-1-3.ec2.cloud.redislabs.com:10482"
-
 MAX_AGE=3600000
 
-NAVER_SECRET=
-NAVER_ID=
+NAVER_SECRET=BlUQ5jyLVg
+NAVER_ID=59ZsaelS5FZXELVZDoma
 
-KAKAO_ID=
-KAKAO_SECRET=
+KAKAO_ID=d2157f8d5b4ccf25765df76b625ba964
+KAKAO_SECRET=Lmsl5y5pFeeu6gjkRPBphBeHDyOmbccq
 
-GOOGLE_ID=
-GOOGLE_SECRET=
+GOOGLE_ID=329126637809-rngmkno9c35v22ndgp8dol11g4hacco1.apps.googleusercontent.com
+GOOGLE_SECRET=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
