--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-naver-v2": "^2.0.8",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "redis-server": "^1.2.2"
   },
   "keywords": [],
   "author": "",
