--- a/config/.env
+++ b/config/.env
@@ -9,6 +9,9 @@ MONGO_PW=KIMhd7624~
 MONGO_DB=default
 
 MAX_AGE=3600000
+PAGE_PADDING=3
+PAGE_LIMIT=10
+PAGE_COUNT=10
 
 NAVER_SECRET=BlUQ5jyLVg
 NAVER_ID=59ZsaelS5FZXELVZDoma
@@ -18,3 +21,4 @@ KAKAO_SECRET=Lmsl5y5pFeeu6gjkRPBphBeHDyOmbccq
 
 GOOGLE_ID=792409244197-a487kc9dlo2rv1l1iukoc6ip9ahfjcjr.apps.googleusercontent.com
 GOOGLE_SECRET=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
+
