--- a/config/.env
+++ b/config/.env
@@ -8,6 +8,7 @@ MONGO_ID=kimhd853
 MONGO_PW=KIMhd7624~
 MONGO_DB=default
 
+MEDIAPATH_SPLIT_TOKEN=__!@$%&__
 MAX_AGE=3600000
 PAGE_PADDING=3
 PAGE_LIMIT=10
