--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "20240122",
+  "name": "20240129",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,9 +13,8 @@
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
-    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
@@ -23,8 +22,7 @@
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-naver-v2": "^2.0.8",
-    "redis": "^4.6.12",
-    "redis-server": "^1.2.2"
+    "redis": "^4.6.12"
   },
   "keywords": [],
   "author": "",
