--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
 PORT=3000
 ALLOW_PORT=5050
 COOKIE_SECRET=API서버 전용 쿠키
-REDIS_URI="redis://default:9AV59FivAswqDFazrzFnY8HncH03NUmf@redis-10482.c326.us-east-1-3.ec2.cloud.redislabs.com:10482"
+REDIS_URI="redis://default:x0Z2HHcZrHd50743Sct5fmCTZyvz0LUa@redis-14562.c277.us-east-1-3.ec2.redns.redis-cloud.com:14562"
 MONGO_URI="mongodb+srv://kimhd853:KIMhd7624~@default.ozyr2oo.mongodb.net/default?retryWrites=true&w=majority"
 
 MONGO_ID=kimhd853
